GearsetPOC/force-app/main/default/objects/Subscription_Rules__c/Subscription_Rules__c.object-meta.xml
<CustomObject>
    <label>Subscription Rules</label>
    <nameField>
        <label>Subscription Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>