GearsetPOC/force-app/main/default/objects/Subscription_Rules__c/fields/Points_Value__c.field-meta.xml
<CustomField>
    <fullName>Points_Value__c</fullName>
    <label>Points Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>