GearsetPOC/force-app/main/default/objects/Subscription_Rules__c/fields/Reward_points_interval__c.field-meta.xml
<CustomField>
    <fullName>Reward_points_interval__c</fullName>
    <label>Reward points interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>