GearsetPOC/force-app/main/default/objects/Subscription_Rules__c/fields/Tier_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Tier_Upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier Upgrade</label>
    <referenceTo>LoyaltyTier</referenceTo>
    <relationshipLabel>Subscriptions Rules</relationshipLabel>
    <relationshipName>Subscriptions_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>