GearsetPOC/force-app/main/default/objects/Subscription_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Points_Value__c</columns>
    <columns>Tier_Upgrade__c</columns>
    <columns>Reward_points_interval__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>